--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "less": "^4.1.1",
     "less-loader": "^10.0.0",
     "vue": "^3.0.5",
