--- a/package.json
+++ b/package.json
@@ -7,19 +7,20 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "less": "^4.1.1",
-    "less-loader": "^10.0.0",
-    "vue": "^3.0.5",
-    "vue-router": "^4.0.10",
-    "vuex": "^4.0.2"
+    "axios": "^1.3.6",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@types/node": "^15.12.5",
-    "@vitejs/plugin-vue": "^1.2.3",
-    "@vue/compiler-sfc": "^3.0.5",
-    "typescript": "^4.3.2",
-    "vite": "^2.3.8",
-    "vue-tsc": "^0.0.24"
+    "@types/node": "^18.16.1",
+    "@vitejs/plugin-vue": "^4.2.1",
+    "@vue/compiler-sfc": "^3.2.47",
+    "typescript": "^5.0.4",
+    "unplugin-auto-import": "^0.15.3",
+    "vite": "^4.3.2",
+    "vue-tsc": "^1.4.4"
   }
 }
